# 4-Periodo-ED2-Trabalho2

./: .README.md.swp  .gitignore  Aresta.c  Aresta.h  CMakeLists.txt  Grafo.c  Grafo.h  Heap.c  Heap.h  ListaAresta.c  ListaAresta.h  README.md  RTT.c  RTT.h  ScriptTeste.sh  ScriptVarejhon.sh  Vertice.c  entrada.txt  generate_data.py  main.c
input/: ex1.txt  ex2.txt  ex3.txt
src/: Aresta.c  Aresta.h  Corzinha.h  Grafo.c  Grafo.h  Heap.c  Heap.h  ListaAresta.c  ListaAresta.h  RTT.c  RTT.h  Vertice.c  Vertice.h  main.c
