cmake_minimum_required(VERSION 3.17)
project(TrabED2___2020_2 C)

set(CMAKE_C_STANDARD 11)

add_executable(TrabED2___2020_2
        src/main.c src/Grafo.c src/Grafo.h src/Aresta.c src/Aresta.h src/ListaAresta.c src/ListaAresta.h src/Heap.c src/Heap.h src/Vertice.c src/Vertice.h src/RTT.c src/RTT.h src/Corzinha.h)
